# ultron-controller

./: .gitignore  .gws_hermes_folder_id  CHANGELOG-v0.5.0.md  README.md  app.py  backend.py  index.html
backend/: _test_kanban_api.py  _test_path.py  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/: gws.py  health.py  hermes.py  hermes_api.py  hermes_profiles.py  kanban.py  openviking.py  search.py  sessions.py  storage_routes.py  system_routes.py  telegram.py
backend/app/core/: __init__.py  config.py  schemas.py  version.py
backend/app/services/: hermes_api_client.py  hermes_files.py  hermes_profiles.py  info_service.py  kanban_reader.py  kanban_writer.py  openviking_client.py  sessions_db.py  storage_service.py  system_service.py  telegram_client_service.py
backend/app/storage_analyzer/: __init__.py  analysis.py  analyzer.py  browse.py  classifier.py  scanner.py
backend/app/system_monitor/: __init__.py  cpu.py  disk.py  memory.py  processes.py
backend/app/utils/: formatters.py  paths.py  safe_path.py
backend/tests/: test_gws.py  test_hermes_profiles.py  test_telegram.py
deploy/: deploy_frontend_and_restart.sh
deploy/scripts/: deploy_frontend_and_restart.sh
deploy/systemd/: ultron-controller.service
design/: memory-page-ux-annotations.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  styles.css
frontend/src/api/: client.ts  types.ts
frontend/src/components/: BreadcrumbPath.tsx  ContentEditor.tsx  Dialog.tsx  Toast.tsx  (+18 more)
scripts/: sync_versions.py  telegram_session_setup.py
(+12 files in other folders)
