[project]
name = "ultron-controller-backend"
version = "0.1.0"
description = "FastAPI backend for Ultron Controller"
readme = "../README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "httpx>=0.27.0",
    "pydantic-settings>=2.4.0",
    "psutil>=7.0.0",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
