[project]
name = "ultron-controller-backend"
version = "0.11.8"
description = "FastAPI backend for Ultron Controller"
readme = "../README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "httpx>=0.27.0",
    "pydantic-settings>=2.4.0",
    "psutil>=7.0.0",
    "python-multipart>=0.0.9",
    "telethon>=1.40.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
]
